# tipps

./: .gitignore  404.html  generate.py  index.html  mkdocs.yml  oldtipps.py  pyproject.toml  requirements.txt  sitemap.xml  tipps.py  wsgi.py
.github/workflows/: make-docs.yml
api/: index.html
details/extensions/: index.html
docs/: api.md  index.md  install.md
docs/assets/: styles.css
docs/details/: extensions.md
docs/writing/: advanced.md  basics.md  embeds.md  styles.md
install/: index.html
search/: search_index.json
templates/bootstrap/: base.html  video.html
tipps/: __init__.py  auth.py  cli.py  db.py  forms.py  mdown.py  model.py  schema.sql  schema.sqlite  util.py  web.py
tipps/api/: v1.py
tipps/static/: styles.css  tipp-styles.css
tipps/templates/: base.html  code.html  default.html  edit.html  image.html  index.html  input.html  list.html  login.html  math.html  mermaid.html  quote.html  scratch.html  video.html
tipps/templates/bootstrap/: base.html  default.html
tipps/templates/partials/: base.html  tipp-base.html
tipps/templates/tipp-templates/: code.html  default.html  image.html  math.html  mermaid.html  quote.html  scratch.html  video.html
writing/advanced/: index.html
writing/basics/: index.html
writing/embeds/: index.html
writing/styles/: index.html
